work fro #6252, resolve #6294 Data saving message vertical alignment can be out of view

--- a/src/common-styles/sv-save-data.scss
+++ b/src/common-styles/sv-save-data.scss
@@ -1,7 +1,7 @@
 @import "../defaultV2-theme/variables.scss";
 
 .sv-save-data_root {
-  position: absolute;
+  position: fixed;
   left: 50%;
   bottom: calcSize(3);
   background: $background;
